# genbankx

./: LICENSE  README.md  pyproject.toml  setup.py
data/: example.gb
src/genbankx/: __init__.py  cli.py  features.py  interval.py  io.py  parser.py  translation.py
tests/: test_basic.py
