[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genbankx"
version = "0.1.0"
description = "Lightweight GenBank parser with ordered CDS IntervalList and translation"
authors = [{ name="BIO0001" }]
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/yinyang-boop/genbankx"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
